--- a/package.json
+++ b/package.json
@@ -29,7 +29,17 @@
   },
   "dependencies": {
     "babel-cli": "^6.18.0",
-    "babel-runtime": "^6.11.6"
+    "babel-runtime": "^6.11.6",
+    "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "express-async-router": "^0.1.12",
+    "express-jwt": "^5.1.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.17.0",
+    "mongoose": "^4.6.7"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
