--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "build": "node tools/build",
     "prepublish": "npm run build",
     "publish:docs": "easystatic deploy docs --repo kriasoft/babel-starter-kit",
-    "dev": "nodemon --exec babel-node -- src/index.js",
+    "dev": "nodemon --exec babel-node -- src/index.js | ./node_modules/.bin/bunyan -o short -l trace",
     "start": "easystatic start docs"
   }
 }
